test/inductive/inductive/reject_param_missing.qdt
inductive T (A : Type) where
  | mk : T → T A
